2008-01-26  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* src/av-cp/renderer-combo.c:

	Keep the RenderingControl proxy in renderer combo as well.

2008-01-26  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* src/av-cp/playlist-treeview.c:
	* src/av-cp/playlist-treeview.h:
	* src/av-cp/renderer-controls.c:

	Implement next/prev controls (locally).

2008-01-26  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* src/av-cp/playlist-treeview.c:

	- Item selection sets the URI on the renderer if it's in
	  PLAYING/PAUSE state.
	- Check if we have a hashtable before unref'ing it.

2008-01-26  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* src/av-cp/renderer-controls.c:

	Make the AV URI setting function more:
	- generic (Takes Callback to call after URI is set)
	- public.

	* src/av-cp/renderer-controls.h:
	* src/av-cp/Makefile.am:

	Add the forgotten renderer-controls.h file to build and VCS.

2008-01-25  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* src/av-cp/playlist-treeview.c:
	* src/av-cp/playlist-treeview.h:
	* src/av-cp/renderer-controls.c:

	get_selected_item() returns the URI instead of resource_hash.

2008-01-24  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* src/av-cp/main.c:

	Use UPnP types to differentiate the devices rather than GTypes.

	* src/av-cp/playlist-treeview.c:
	* src/av-cp/playlist-treeview.h:

	- Use GUPnPDeviceProxy rather than now removed GUPnPMediaServerProxy.
	- Move and adapt code from GUPnPMediaServerProxy for 'browse'.

	* src/av-cp/renderer-combo.c:
	* src/av-cp/renderer-combo.h:

	Use GUPnPDeviceProxy rather than now removed GUPnPMediaRendererProxy.

2008-01-13  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* src/av-cp/gui.c:
	* src/common/icons.c:
	* src/common/icons.h:
	* src/network-light/Makefile.am:
	* src/network-light/gui.c:
	* src/universal-cp/gui.c:

	Refactor: Move the load_pixbuf_file() into common icon module and use
	that function in that module as well.

2008-01-13  Zeeshan Ali Khattak  <zeenix@gmail.com>
	Vinicius Depizzol <vdepizzol@gmail.com>
