@@ -1,3 +1,9 @@
+2008-01-27  Zeeshan Ali Khattak  <zeenix@gmail.com>
+
+	* src/av-cp/renderer-combo.c:
+
+	Keep track of the Master volume of each MediaRenderer.
+
 2008-01-26  Zeeshan Ali Khattak  <zeenix@gmail.com>
 
 	* src/av-cp/renderer-combo.c:
